fix white space

--- a/assets/experiment_css.css
+++ b/assets/experiment_css.css
@@ -1,8 +1,8 @@
 @media only screen and (min-width: 768px)  {
     .white-space-ann{
-        margin-left: 70px;
+        margin-left: 50px;
     }
     .white-space-bill{
-        margin-left: 90px;
+        margin-left: 60px;
     }
 }
